Can now draw boxes to mark out areas on grading-canvas

--- a/app/views/examiners/_workbench.html.haml
+++ b/app/views/examiners/_workbench.html.haml
@@ -38,7 +38,7 @@
 #workbench-controls.top-panel-controls
   %ul.no-bullets
     = minor_link :for => 'grading', :as => 'scans to grade', 
-                 :with => {:panels => {:side => '#ungraded-responses'}}
+                 :with => {:panels => {:side => '#ungraded-responses', :wide => '#grading-canvas'}}
     = minor_link :for => 'db-slots', :as => 'add questions to db'
     = minor_link :for => 'new-scans', :as => 'get new scans'
     = minor_link :for => 'tagged-ques', :as => 'tagged questions'
