--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -40,6 +40,7 @@
     = render :partial => 'toolbox/katana'
     = render :partial => 'toolbox/document_preview'
     = render :partial => 'toolbox/edit_account'
+    = render :partial => 'toolbox/grading_canvas'
   
 !!!5
 
