--- a/app/views/layouts/examiner.html.haml
+++ b/app/views/layouts/examiner.html.haml
@@ -10,6 +10,7 @@
     = render :partial => 'yardsticks/list'
     = render :partial => 'verticals/masterlist'
     = render :partial => 'topics/masterlist'
+    = render :partial => 'tooolbox/grading_canvas'
 
 
 !!!5
