Rudimentary "undo" facility added to canvas

--- a/app/views/examiners/_ungraded.html.haml
+++ b/app/views/examiners/_ungraded.html.haml
@@ -2,3 +2,5 @@
 #ungraded-responses
   #list-ungraded-responses.list.hidden
   #yardstick-buttons
+    .submit-buttons
+      %input#undo-btn{ :type => :button, :value => "Undo Last" }
