--- a/app/views/examiners/_workbench.html.haml
+++ b/app/views/examiners/_workbench.html.haml
@@ -17,14 +17,14 @@
       = f.inputs do
         = f.input :id, :wrapper_html => { :class => 'hidden' }
         = f.input :topic_id, :wrapper_html => { :class => 'hidden' }
-        = f.input :marks, :as => :select, :include_blank => false,
+        = f.input :marks, :as => :select, :include_blank => true,
                   :collection => [*1..6], 
                   :wrapper_html => {:class => 'full-width'}
         = f.input :difficulty, :as => :select, :include_blank => false,
                   :collection => {:introductory => 1, :intermediate => 2, :advanced => 3},
                   :wrapper_html => {:class => 'full-width'},
                   :label => 'topic treatment'
-        = f.input :page_length, :as => :select, :include_blank => false,
+        = f.input :page_length, :as => :select, :include_blank => true,
                   :collection => {'mcq' => 1, 'half-page' => 2, 'full-page' => 3},
                   :wrapper_html => {:class => 'full-width'}
         = f.input :multi_correct, :as => :select, :include_blank => false,
