--- a/app/assets/stylesheets/yardsticks.css.scss
+++ b/app/assets/stylesheets/yardsticks.css.scss
@@ -1,12 +1,13 @@
 
-$blue:#495c5e ;
+$blue:#00007f ;
 $orange:#f48d07 ;
-$green:#165008 ;
+$green:#168816 ;
 $purple:#3a4d4e ;
 $black:black ;
 $red:red ;
 $gray:#191919 ;
 $pink:#e3105a ;
+$yellow: #ffff00 ;
 $light-gray: lighten($gray, 30%) ;
 
 // Vertical jQuery tabs via CSS 
@@ -115,35 +116,35 @@ $light-gray: lighten($gray, 30%) ;
   }
 
   #tab-ys-5:not([class~="ui-tabs-selected"]) {
-    background-color: lighten($black, 40%);
+    background-color: lighten($green, 13%);
   }
 
   #tab-ys-6:not([class~="ui-tabs-selected"]) {
-    background-color: lighten($black, 20%);
+    background-color: saturate($green, 50%);
   }
 
   #tab-ys-7:not([class~="ui-tabs-selected"]) {
-    background-color: lighten($black, 50%);
+    background-color: lighten($blue, 50%);
   }
 
   #tab-ys-8:not([class~="ui-tabs-selected"]) {
-    background-color: lighten($black, 40%);
+    background-color: lighten($blue, 40%);
   }
 
   #tab-ys-9:not([class~="ui-tabs-selected"]) {
-    background-color: lighten($black, 30%);
+    background-color: lighten($blue, 30%);
   }
 
   #tab-ys-A:not([class~="ui-tabs-selected"]) {
-    background-color: lighten($black, 20%);
+    background-color: lighten($blue, 20%);
   }
 
   #tab-ys-B:not([class~="ui-tabs-selected"]) {
-    background-color: lighten($black, 10%);
+    background-color: lighten($blue, 10%);
   }
 
   #tab-ys-C:not([class~="ui-tabs-selected"]) {
-    background-color: lighten($green, 10%);
+    background-color: lighten($black, 40%);
   }
 
 }
