--- a/app/views/yardsticks/_list.html.haml
+++ b/app/views/yardsticks/_list.html.haml
@@ -6,9 +6,10 @@
   .vertical-tabs 
     %ul
       - yardsticks.each_with_index do |y,j|
+        - label = y.mcq ? "M#{j}" : "G#{j+1}"
         - j_as_hex = j.to_s(16).upcase
         %li{ :id => "tab-ys-#{j_as_hex}" }
-          %a{ :href => "#ys-#{j}", :marker => "#{y.id}" }= "#{j_as_hex}"
+          %a{ :href => "#ys-#{j}", :marker => "#{y.id}" }= "#{label}"
 
     - yardsticks.each_with_index do |y,j|
       %div{ :id => "ys-#{j}" }
