Changed #list-pending from a <ul> to a nested <div>
The response IDs pertaining to a scan are listed within the <div>
for the scan

--- a/app/views/examiners/_ungraded.html.haml
+++ b/app/views/examiners/_ungraded.html.haml
@@ -11,7 +11,7 @@
   #pending-quizzes
   #pending-pages
   #pending-scans
-    %ul#list-pending.purgeable.hidden
+    #list-pending.purgeable.hidden
     .submit-buttons
       %input#undo-btn{ :type => :button, :value => "Undo Last" }
     #grading-panel
