Added hidden input field in #pending-scans > form to capture clicks on canvas

--- a/app/views/examiners/_ungraded.html.haml
+++ b/app/views/examiners/_ungraded.html.haml
@@ -15,7 +15,7 @@
     .submit-buttons
       %input#undo-btn{ :type => :button, :value => "Undo Last" }
     #grading-panel
-      = semantic_form_for :grade, :remote => true, :method => :put, :url => '#' do |f|
+      = semantic_form_for :grade, :remote => true, :method => :put, :url => 'course/questions' do |f|
         - [*1..4].each do |index|
           .grd-control{ :id => "grd-control-#{index}" }
             .grd-label.left= "Q#{index}."
@@ -23,6 +23,8 @@
             .grd-ticker.right{ :id => "grd-ticker-#{index}" }
             = f.input "assigned_#{index}", :as => :number, :wrapper_html => { :class => :hidden},
               :input_html => { :name => "grade[#{index}]" }
+        = f.input :annotation, :wrapper_html => { :class => :hidden },
+          :input_html => { :name => :clicks }
         .submit-buttons
           = submit_tag "Assign"
 
