--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -41,6 +41,7 @@
     = render :partial => 'toolbox/document_preview'
     = render :partial => 'toolbox/edit_account'
     = render :partial => 'toolbox/grading_canvas'
+    = render :partial => 'toolbox/grading_btns'
   
 !!!5
 
