--- a/app/views/examiners/_ungraded.html.haml
+++ b/app/views/examiners/_ungraded.html.haml
@@ -16,13 +16,7 @@
       %input#undo-btn{ :type => :button, :value => "Undo Last" }
     #grading-panel
       = semantic_form_for :grade, :remote => true, :method => :put, :url => 'assignGrades' do |f|
-        - [*1..4].each do |index|
-          .grd-control{ :id => "grd-control-#{index}" }
-            .grd-label.left= "Q#{index}."
-            .grd-slider.left{ :id => "grd-slider-#{index}" }
-            .grd-ticker.right{ :id => "grd-ticker-#{index}" }
-            = f.input "assigned_#{index}", :as => :number, :wrapper_html => { :class => :hidden},
-              :input_html => { :name => "grade[#{index}]" }
+        #grade-controls.purgeable
         = f.input :annotation, :wrapper_html => { :class => :hidden },
           :input_html => { :name => :clicks }
         .submit-buttons
