Clicks on grading buttons within the grading panel passes the ID of the corresponding yardstick

--- a/app/views/toolbox/_grading_btns.html.haml
+++ b/app/views/toolbox/_grading_btns.html.haml
@@ -12,12 +12,12 @@
 .grade-btns-mcq
   %input.hidden{ :type => :number, :name => 'tbd' }
   - mcq.each_with_index do |m, index|
-    %input{ :type => :radio, :id => "mcq-#{index}", :marker => "#{index}"}
+    %input{ :type => :radio, :id => "mcq-#{index}", :marker => "#{m}"}
     %label{ :for => "mcq-#{index}", :color => "mcq-#{index+1}" }= "M#{index+1}"
 
 - non_mcq = Yardstick.order(:default_allotment).select{ |y| !y.mcq }.map(&:id)
 .grade-btns-non-mcq
   %input.hidden{ :type => :number, :name => 'tbd' }
   - non_mcq.each_with_index do |m, index|
-    %input{ :type => :radio, :id =>"non-#{m}", :marker => "#{index}" }
+    %input{ :type => :radio, :id =>"non-#{m}", :marker => "#{m}" }
     %label{ :for => "non-#{m}", :color => "non-mcq-#{index+1}" }= "G#{index+1}"
