Corrected spelling mistake in partial file name
Also, added grading_btns for non-admin examiners

--- a/app/views/layouts/examiner.html.haml
+++ b/app/views/layouts/examiner.html.haml
@@ -10,7 +10,8 @@
     = render :partial => 'yardsticks/list'
     = render :partial => 'verticals/masterlist'
     = render :partial => 'topics/masterlist'
-    = render :partial => 'tooolbox/grading_canvas'
+    = render :partial => 'toolbox/grading_canvas'
+    = render :partial => 'toolbox/grading_btns'
 
 
 !!!5
