Styling and addition of a micro-ticker to swiss-knife ..
.. in anticipation of changes to follow

--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -203,6 +203,14 @@ span.unhappyMessage {
   }
 }
 
+.micro-ticker {
+  color: $orange ;
+  font: {
+    size: 10pt ;
+    weight: normal ;
+  }
+}
+
 
 .grd-control {
   height: 45px ;
