Report grading work progress thru colour coding and running totals

--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -212,6 +212,10 @@ span.unhappyMessage {
   }
 }
 
+.micro-ticker.complete {
+  color: #6ca7ab ;
+}
+
 .micro-ticker.box {
   width: 30px ;
   color: white ;
