--- a/app/views/yardsticks/_list.html.haml
+++ b/app/views/yardsticks/_list.html.haml
@@ -2,6 +2,7 @@
 - yardsticks = Yardstick.order('mcq DESC').order(:default_allotment)
 - role = current_account.role
 - loggable_id = current_account.loggable_id
+- grade_weights = []
 
 #yardsticks-summary.left
   .vertical-tabs 
@@ -9,11 +10,14 @@
       - yardsticks.each_with_index do |y,j|
         - label = y.mcq ? "M#{j-6}" : "G#{j+1}"
         - j_as_hex = j.to_s(16).upcase
-        - allotment = (role == :admin) ? y.default_allotment : Grade.where(:teacher_id => loggable_id, :yardstick_id => y.id).first.allotment
+        - allotment = (role == :teacher) ? Grade.where(:teacher_id => loggable_id, :yardstick_id => y.id).first.allotment : y.default_allotment
+        - grade_weights.push allotment
+
         %li{ :id => "tab-ys-#{j_as_hex}" }
           %a{ :href => "#ys-#{j}", :marker => "#{y.id}", :allotment => allotment }= "#{label}"
 
     - yardsticks.each_with_index do |y,j|
+      - allotment = grade_weights[j]
       %div.panel{ :id => "ys-#{j}" }
 
         -# Only for Admin, a link to edit yardstick description 
@@ -25,13 +29,13 @@
         .edit-allotment
           .ys-slider{ :id => "ys-#{y.id}-slider" }
           - if role == :admin
-            .ys-ticker.right= "#{y.default_allotment}%"
+            .ys-ticker.right= "#{allotment}%"
             = semantic_form_for :yardstick, :remote => true, :url => "/yardstick.json?id=#{y.id}", :method => :put do |f|
               = f.input :default_allotment, :wrapper_html => { :class => 'hidden' }, :as => :number
               .submit-buttons
                 = submit_tag 'update'
           - elsif role == :teacher
-            .ys-ticker.right= "#{Grade.where(:yardstick_id => y.id, :teacher_id => loggable_id).first.allotment}%"
+            .ys-ticker.right= "#{allotment}%"
             = semantic_form_for :grade, :remote => true, 
                                 :url => "/grade.json?id=#{y.id}&teacher_id=#{loggable_id}", 
                                 :method => :put do |f|
