Added p.instructions for new navigational keys - B & N

--- a/app/views/examiners/_ungraded.html.haml
+++ b/app/views/examiners/_ungraded.html.haml
@@ -11,6 +11,7 @@
   #pending-quizzes
   #pending-pages
   #pending-scans
+    %p.instructions= "N = next image | B = back to previous "
     #list-pending.purgeable.hidden
     .submit-buttons
       %input#undo-btn{ :type => :button, :value => "Undo Last" }
