--- a/app/views/yardsticks/_list.html.haml
+++ b/app/views/yardsticks/_list.html.haml
@@ -5,6 +5,7 @@
 - grade_weights = []
 
 #yardsticks-summary.left
+  %p.instructions= "N = next image | B = back to previous"
   .vertical-tabs 
     %ul
       - yardsticks.each_with_index do |y,j|
