--- a/app/views/teachers/_reportcards.html.haml
+++ b/app/views/teachers/_reportcards.html.haml
@@ -1,5 +1,6 @@
 
 #report-cards-summary.flipchart
+  %p.instructions= "N = next page | B = back to previous page"
   %ul
     %li
       %a{ :href => '#testpaper' }= "testpaper"
