--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,7 +2,7 @@
 
 %html{html_attrs}
   %head 
-    %title TeachAssist
+    %title= "Grades will happen ..."
     = stylesheet_link_tag "application" 
     = javascript_include_tag "application"
     = csrf_meta_tag
