Preliminary provision for a flot chart when viewing report cards in Teacher console

--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -29,6 +29,12 @@ body {
   color: white ;
 } 
 
+#flot-chart {
+  width: 600px ;
+  height: 800px ;
+  margin-left: 20px ;
+}
+
 .instructions {
   text-align: justify ;
   font: {
