--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -29,6 +29,8 @@
 %html{html_attrs}
   %head 
     = javascript_include_tag "application", "teachers"
+    /[if lte IE 8]
+      = javascript_include_tag "flot/excanvas.min"
     = stylesheet_link_tag "application" 
     = csrf_meta_tag
 
