--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -30,7 +30,7 @@
   %head 
     = javascript_include_tag "application", "teachers"
     /[if lte IE 8]
-      = javascript_include_tag "flot/excanvas.min"
+      = javascript_include_tag "excanvas.min"
     = stylesheet_link_tag "application" 
     = csrf_meta_tag
 
