Adding student names as label on flot-chart ..
This code is becoming very messy very quickly. Need to structure/clean it up

--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -35,6 +35,14 @@ body {
   margin-left: 20px ;
 }
 
+.data-point-label {
+  font: {
+    size: 11px ;
+    weight: normal ;
+  }
+  position: absolute ;
+}
+
 .instructions {
   text-align: justify ;
   font: {
