--- a/app/views/layouts/students.html.haml
+++ b/app/views/layouts/students.html.haml
@@ -11,7 +11,7 @@
 
 %html{html_attrs}
   %head 
-    = javascript_include_tag "application"
+    = javascript_include_tag "application", "students"
     = stylesheet_link_tag "application" 
     = csrf_meta_tag
 
