--- a/app/views/teachers/_control-panel.html.haml
+++ b/app/views/teachers/_control-panel.html.haml
@@ -1,7 +1,7 @@
 
 %ul.no-bullets
-  = main_link :for => 'report-cards', :with => { :panels => {:wide => "#flot-chart" } }
+  = main_link :for => 'report-cards', :as => 'report cards', :with => { :panels => {:wide => "#flot-chart" } }
   = main_link :for => 'quizzes', :default => true
-  = main_link :for => 'yardsticks', :as => 'marking-scheme' 
+  = main_link :for => 'yardsticks', :as => 'marking scheme' 
   = main_link :for => :account, :as => 'my account'
   = main_link :for => :logout, :href => "/logout", :dynamic => false
