Reverting to height=800px. Too cramped otherwise

--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -31,8 +31,9 @@ body {
 
 #flot-chart {
   width: 600px ;
-  height: 600px ;
-  margin-left: 20px ;
+  height: 800px ;
+  margin-left: 40px ;
+  margin-top: 40px ;
 }
 
 .data-point-label {
