Remove dotted outline on click

--- a/app/assets/stylesheets/new-interface.css
+++ b/app/assets/stylesheets/new-interface.css
@@ -127,6 +127,7 @@ fieldset.inputs li.boolean.input {
 .main-link[selected], .minor-link[selected] {
   padding-bottom: 4px ;
   border-bottom : 2px solid #6ca7ab ;
+  outline: 0 ;
 }
 
 .no-bullets, ul.sortable {
