--- a/app/views/toolbox/_grading_btns.html.haml
+++ b/app/views/toolbox/_grading_btns.html.haml
@@ -11,11 +11,11 @@
 - mcq = Yardstick.order(:default_allotment).select{ |y| y.mcq }.map(&:id)
 .grade-btns-mcq
   - mcq.each_with_index do |m, index|
-    %input{ :type => :radio, :id => "mcq-#{index}", :marker => "#{m}", :name => 'tbd', :value => "#{m.id}" }
+    %input{ :type => :radio, :id => "mcq-#{index}", :marker => "#{m}", :name => 'tbd', :value => "#{m}" }
     %label{ :for => "mcq-#{index}", :color => "mcq-#{index+1}" }= "M#{index+1}"
 
 - non_mcq = Yardstick.order(:default_allotment).select{ |y| !y.mcq }.map(&:id)
 .grade-btns-non-mcq
   - non_mcq.each_with_index do |m, index|
-    %input{ :type => :radio, :id =>"non-#{m}", :marker => "#{m}", :name => 'tbd', :value => "#{m.id}"}
+    %input{ :type => :radio, :id =>"non-#{m}", :marker => "#{m}", :name => 'tbd', :value => "#{m}"}
     %label{ :for => "non-#{m}", :color => "non-mcq-#{index+1}" }= "G#{index+1}"
