--- a/app/views/teachers/_buildquiz.html.haml
+++ b/app/views/teachers/_buildquiz.html.haml
@@ -43,11 +43,11 @@
         %span.target= "What happens now?"
         %p.instructions 
           Your request has been placed in a queue and will be 
-          picked up after some time for processing
+          picked up automatically for processing
       %legend
         %span.target= "Can I logout now?"
         %p.instructions 
           Sure you can. If there is nothing else you need to do
-          at this time, then - by all means - logout. Or, continue using 
-          the site. Either way, your request is safely in the queue
-          and will be processed
+          on the site at this time, then - by all means - logout. 
+          Or, continue using as normal. Either way, your request is safely 
+          in the queue and will be processed
