Added search filters to workbench-controls
Much more generic than having custom links - like tagged-ques-link.
Now, one can see only those questions, on only those topics, authored by
only those people that one is interested in

--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -474,3 +474,13 @@ span.unhappyMessage {
     float: right ;
   }
 }
+
+#workbench-controls {
+  > form {
+    min-width: 40% ;
+
+    > li {
+      float: left ;
+    }
+  }
+}
