--- a/app/views/examiners/_workbench.html.haml
+++ b/app/views/examiners/_workbench.html.haml
@@ -47,7 +47,8 @@
 
   = form_tag questions_list_path, :method => :get, :remote => true, :class => 'right' do |f| 
     = semantic_fields_for :qsearch do |a|
-      = a.input :by, :as => :select, :collection => Examiner.order(:last_name).map{ |m| {m.name => m.id} }.inject(:merge)
+      = a.input :by, :as => :select, 
+      :collection => Examiner.order(:last_name).map{ |m| {m.abbreviated_name => m.id} }.inject(:merge)
       = a.input :on, :as => :select, :collection => Vertical.order(:name).map{ |m| {m.name => m.id} }.inject(:merge)
       = a.input :tagged, :as => :select, :collection => {:no => false, :yes => true}, :include_blank => false
     = submit_tag 'Search'
