Quizzes now need to be given a name by the teacher ..
Previously, we generated a name. But such names can never be good
names for the teacher because they don't capture the context in
which the teacher is making the quiz

This is just the first draft. Bug-fixes & sanity checks to follow

--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -137,6 +137,16 @@ body {
     min-width: 50px ;
     margin-bottom: 18px ;
   }
+
+  > input[type="text"] {
+    float: left ; 
+    width: 60% ;
+    padding: 5px 6px 5px 6px ;
+    font-size: 13px ;
+    border-radius: 0px ;
+    margin-right: 10px ;
+  }
+  
 }
 
 #side-panel {
