--- a/app/views/teachers/_buildquiz.html.haml
+++ b/app/views/teachers/_buildquiz.html.haml
@@ -25,6 +25,7 @@
   #question-options
     = form_tag 'teacher/build_quiz', :remote => true, :method => :put do |f| 
       .submit-buttons
+        = text_field_tag :quiz_name, nil, :placeholder => "give the quiz a name", :size => 20
         = submit_tag 'build quiz'
       .form-fields
 
