--- a/app/views/examiners/_workbench.html.haml
+++ b/app/views/examiners/_workbench.html.haml
@@ -19,7 +19,7 @@
     = semantic_form_for :misc, :remote => true, :url => '/question', :method => :put do |f|
       = f.inputs do
         = f.input :difficulty, :as => :select, :include_blank => false,
-                  :collection => {:introductory => 1, :intermediate => 2, :advanced => 3},
+                  :collection => {'junior school (<9)' => 1, 'middle (9-10)' => 2, 'senior (11-12)' => 3},
                   :wrapper_html => {:class => 'full-width'},
                   :label => 'topic treatment'
         = f.input :num_parts, :as => :select, :include_blank => true, :label => '# sub-parts',
